# Automate_ML

./: README.md  environment.yml  pyproject.toml  requirements.txt  setup.py  template.py
configs/: default.yaml  fe_rules.yaml  master_report_fields.yaml  thresholds.yaml
outputs/: feature_engineering_report.csv  master_report.csv  pandera_validation.json  summary.json  ydata_profile_status.json
scripts/: run_fe_report.py  run_full_audit.py  run_master_report.py
src/audit_engine/: __init__.py  cli.py
src/audit_engine/adapters/: deepchecks_adapter.py  pandera_adapter.py  pyod_adapter.py  rapidfuzz_adapter.py  ydata_adapter.py
src/audit_engine/core/: config.py  constants.py  enums.py  exceptions.py  logger.py  schemas.py
src/audit_engine/ingest/: delimiter_detector.py  encoding_detector.py  loader.py  metadata.py
src/audit_engine/pipelines/: fe_pipeline.py  full_pipeline.py  master_pipeline.py
src/audit_engine/profiling/: column_profile.py  dataset_profile.py  null_profile.py  parse_profile.py  stats_cache.py  string_profile.py  uniqueness_profile.py
src/audit_engine/reports/: csv_exporter.py  fe_report_builder.py  html_exporter.py  json_exporter.py  master_report_builder.py  summary_builder.py
src/audit_engine/rules/: fe_rule_engine.py  master_rule_engine.py  recommendation_engine.py  severity_engine.py
src/audit_engine/signals/: categorical_signals.py  datetime_signals.py  dtype_signals.py  key_signals.py  leakage_signals.py  missingness_signals.py  (+6 more)
tests/: test_ingest.py  test_profiles.py  test_report_builders.py  test_rules.py  test_signals.py
(+5 files in other folders)
